--- a/csv-parser/package.json
+++ b/csv-parser/package.json
@@ -16,6 +16,7 @@
     "csv-parser": "^3.0.0"
   },
   "devDependencies": {
+    "copyfiles": "^2.4.1",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.9.0",
     "ts-node": "^10.9.2",
