ci: inject base URL

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      - name: Get Pages Base URL
+        id: get-pages-base-url
+        uses: actions/configure-pages@v5
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
@@ -25,6 +28,9 @@ jobs:
         run: npm ci
       - name: Build the app (root)
         run: npm run build
+        with:
+          env:
+            BASE_URL: ${{ steps.get-pages-base-url.outputs.base_url }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
