--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build the app (root)
         run: npm run build
         env:
-          BASE_URL: ${{ steps.get-pages-base-url.outputs.base_url }}
+          GITHUB_PAGES_BASE_URL: ${{ steps.get-pages-base-url.outputs.base_path }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
